CRUD for AUTH and grouping for SWAGGER
