# server.js
@@ -22,8 +22,8 @@ require("dotenv-flow").config();
 // Parse incoming requests data
 app.use(bodyParser.json());
 
-app.get("/api/welcome", (req, res) => {
-    res.status(200).send({ message: "Hello" });
+app.get("/api/", (req, res) => {
+    res.status(200).send("Hello there!");
 });
 
 // Connect to database
@@ -37,7 +37,7 @@ mongoose.connect(
 mongoose.connection.once("open", () => console.log("Connected to database"));
 
 // Use the routes
-app.use("/api/test", verifyToken, testRouter);
+app.use("/api/test", testRouter);
 app.use("/api/cat", verifyToken, catRouter);
 app.use("/api/user", userRouter);
 
